--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "license": "MIT",
   "scripts": {
+    "build": "webpack --mode production",
     "start": "webpack-dev-server --open"
   },
   "dependencies": {
